interpreter-janeklang/tests/good/05_whileIf_1.janek
int main() {
    int i = 0;
    while (i < 5) {
        print(i);
        i = i + 1;
    }
    if (i == 5) {
        print("i is 5");
    }
    return 0;
}
