interpreter-janeklang/tests/bad/09_obscuredWrongType_1.janek
int main(){
    string s = "asd";
    string d = "2137";
    while(true){
        int s = 123;
        d = s;
    }
    return 0;
}